...
                alignment: Alignment.center,
                minWidth: size.width,
                maxWidth: size.width,
                minHeight: size.height,
                maxHeight: size.height,
                child: SizedBox(
                  key: const Key('video-display-rect'),
                  width: size.width,
                  height: size.height,
                  child: _video,
                ),
              ),
            ),
...
